--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,12 @@
   height: 80px;
   width: 380px;
   border: 1px solid black;
+  text-align: center;
+}
+
+.operation-display {
+  font-size: 25px;
+  font-family: "Inter", sans-serif;
 }
 
 .keyboarrd {
