--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 10px;
 }
 
 .button-row {
@@ -34,7 +35,6 @@
   align-items: center;
   justify-content: center;
   gap: 18px;
-  margin-top: 30px;
 }
 
 .op-buttons {
