--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@
   align-items: center;
   justify-content: right;
   margin-right: 40px;
+  height: auto;
 }
 
 .result-text {
@@ -44,15 +45,15 @@
 }
 
 .keyboarrd {
-  height: 600px;
+  height: auto;
   width: 380px;
-
+  border-top: 1px solid gray;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 10px;
-  margin-top: 45px;
+  margin-top: 100px;
 }
 
 .button-row {
