--- a/src/index.css
+++ b/src/index.css
@@ -97,7 +97,13 @@ body {
   justify-content: space-evenly;
   margin-bottom: 10px;
   gap: 100px;
-  padding: 10px;
+  margin-top: 6px;
+}
+
+.container-two {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .history-button {
