Added new features

--- a/src/index.css
+++ b/src/index.css
@@ -151,3 +151,18 @@ body {
 .history::-webkit-scrollbar-thumb:hover {
   background: rgba(128, 128, 128, 0.5);
 }
+
+/* PWA-specific adjustments when app is installed as standalone */
+@media (display-mode: standalone) {
+  .divider-span {
+    margin-top: 25px;
+  }
+
+  .operation-buttons-div {
+    margin-top: 31px; /* 6px + 25px */
+  }
+
+  .keyboarrd {
+    margin-top: 105px; /* 80px + 25px */
+  }
+}
